fix: config and serialization issue