@@ -11,6 +11,22 @@ allprojects {
     version = project.findProperty('version') ?: '1.0.0'
 }
 
+ext {
+    chronicleJvmArgs = [
+            '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens=java.base/java.math=ALL-UNNAMED'
+    ]
+}
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'maven-publish'
@@ -186,10 +202,7 @@ subprojects {
     }
 
     tasks.withType(JavaExec).configureEach {
-        jvmArgs += [
-                '--add-opens=java.base/java.lang=ALL-UNNAMED',
-                '--add-opens=java.base/java.math=ALL-UNNAMED'
-        ]
+        jvmArgs += chronicleJvmArgs
     }
 
     tasks.withType(Javadoc).configureEach {
